Actions
Bug #9724
closedqede needs updates for newer GCC
Start date:
2018-08-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
../../common/io/qede/qede_gld.c: In function 'qede_set_loopback_mode': ../../common/io/qede/qede_gld.c:1266:6: error: variable 'ret' set but not used [-Werror=unused-but-set-variable] int ret, i = 0; ^~~ ../../common/io/qede/qede_gld.c: In function 'qede_ioctl_rd_wr_nvram': ../../common/io/qede/qede_gld.c:1467:11: error: variable 'ret' set but not used [-Werror=unused-but-set-variable] uint32_t ret = 0, hdr_size = 24, bytes_to_copy, copy_len = 0; ^~~ ../../common/io/qede/579xx/drivers/ecore/ecore_dcbx.c: In function 'ecore_dcbx_update_app_info': ../../common/io/qede/579xx/drivers/ecore/ecore_dcbx.c:244:8: error: variable 'name' set but not used [-Werror=unused-but-set-variable] char *name; ^~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_dcbx.c: In function 'ecore_dcbx_mib_update_event': ../../common/io/qede/579xx/drivers/ecore/ecore_dcbx.c:1002:9: error: variable 'enabled' set but not used [-Werror=unused-but-set-variable] bool enabled; ^~~~~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c: In function 'ecore_do_mcp_cmd': ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c:365:20: error: variable 'actual_mb_seq' set but not used [-Werror=unused-but-set-variable] u32 seq, cnt = 1, actual_mb_seq; ^~~~~~~~~~~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c: In function 'ecore_mcp_send_protocol_stats': ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c:1436:31: error: variable 'stats_type' set but not used [-Werror=unused-but-set-variable] enum ecore_mcp_protocol_type stats_type; ^~~~~~~~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c: In function 'ecore_mcp_phy_sfp_read': ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c:3131:23: error: variable 'rc' set but not used [-Werror=unused-but-set-variable] enum _ecore_status_t rc; ^~ ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c: In function 'ecore_mcp_phy_sfp_write': ../../common/io/qede/579xx/drivers/ecore/ecore_mcp.c:3177:23: error: variable 'rc' set but not used [-Werror=unused-but-set-variable] enum _ecore_status_t rc; ^~ ../../common/io/qede/579xx/drivers/ecore/ecore_phy.c: In function 'ecore_ah_e5_phy_mac_stat': ../../common/io/qede/579xx/drivers/ecore/ecore_phy.c:629:28: error: variable 'data_hi' set but not used [-Werror=unused-but-set-variable] u32 length, reg_id, addr, data_hi, data_lo; ^~~~~~~
Updated by John Levon almost 5 years ago
- Subject changed from qede: variable set but not used to qede needs updates for newer GCC
- Assignee changed from Yuri Pankov to John Levon
Note: as a non-DEBUG build has -Wno-unused, these errors only show up during a DEBUG build with newer GCCs.
Updated by Electric Monk almost 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 50 to 100
git commit b68ddc76a8be9a9b8d7a1eae3a3613b6bce942e5
commit b68ddc76a8be9a9b8d7a1eae3a3613b6bce942e5 Author: John Levon <john.levon@joyent.com> Date: 2018-10-10T17:16:58.000Z 9724 qede needs updates for newer GCC Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Anand Khoje <Anand.Khoje@cavium.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions