9724 qede: variable set but not used